force-app/main/default/objects/Deal_Contacts__c/Deal_Contacts__c.object-meta.xml
<CustomObject>
    <description>This object is used on the deal object, so that users can easily see all of the Merchant contacts related to this deal.</description>
    <label>Deal Contact</label>
    <nameField>
        <displayFormat>DC - {000000}</displayFormat>
        <label>Deal Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>