force-app/main/default/objects/Deal_Contacts__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Related Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Cruises</fullName>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Land Activities</fullName>
            </value>
            <value>
                <fullName>Land Tour</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>