force-app/main/default/objects/Deal_Contacts__c/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <formula>Contact_Name__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>