force-app/main/default/objects/Deal_Contacts__c/fields/Office_phone__c.field-meta.xml
<CustomField>
    <fullName>Office_phone__c</fullName>
    <formula>Contact_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office phone</label>
    <type>Text</type>
</CustomField>